# brianjlogan.com

./: Cargo.toml  README.md  Trunk.toml  config.toml  flake.nix  index.html  style_guide.md  sync.sh  ux_efforts.md
content/: _index.md  post-2.md  post-3.md  quigley.md
content/about/: _index.md
content/contact/: _index.md
css/: main.scss
images/: background.jfif
index/: main.json
posts/: frontpage.md  test.md
public/: search_index.en.js
search-index/: Cargo.toml
search-index/src/: main.rs
src/: constants.rs  lib.rs  main.rs
src/components/: base.rs  cpost.rs  footer.rs  frontpage.rs  header.rs  mod.rs  notfound.rs  post.rs  post_list.rs  search.rs
src/model/: fetch.rs  index.rs  mod.rs  posts.rs
src/views/: front_page.rs  mod.rs  post.rs  vpost.rs
templates/: index.html
themes/anatole-zola/templates/: basic.html  contact.html
