[package]
name = "brianjlogan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version="0.8", features=['ssr','hydrate','suspense']}
sycamore-router = "0.8"
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0.80", features = ["derive"] }
wasm-bindgen = {version="0.2.84"}
serde-wasm-bindgen = "0.5.0"
mdsycx = "0.1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
